Fix scrollbar style

--- a/static/assets/sass/base/_homepage.scss
+++ b/static/assets/sass/base/_homepage.scss
@@ -224,14 +224,8 @@
   background: #f1f2f3;
   padding: 80px 0;
   height: calc(100vh + 60px);
-  overflow-x: hidden;
   top: 60px;
-  -ms-overflow-style: none; /* IE and Edge */
-  scrollbar-width: none; /* Firefox */
-  
-  &::-webkit-scrollbar {
-    display: none;
-  }
+
   .features-tabs {
     position: sticky;
     top: 110px;
@@ -263,6 +257,12 @@
   .products-description-wrapper {
     max-height: 70vh;
     overflow-y: auto;
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+
+    &::-webkit-scrollbar {
+      display: none;
+    }
   }
   .product-description {
     .brand {
