--- a/static/assets/sass/main.css
+++ b/static/assets/sass/main.css
@@ -8812,16 +8812,7 @@ Responsive Classes
   background: #f1f2f3;
   padding: 80px 0;
   height: calc(100vh + 60px);
-  overflow-x: hidden;
   top: 60px;
-  -ms-overflow-style: none;
-  /* IE and Edge */
-  scrollbar-width: none;
-  /* Firefox */
-}
-
-.products-features::-webkit-scrollbar {
-  display: none;
 }
 
 .products-features .features-tabs {
@@ -8853,6 +8844,14 @@ Responsive Classes
 .products-features .products-description-wrapper {
   max-height: 70vh;
   overflow-y: auto;
+  -ms-overflow-style: none;
+  /* IE and Edge */
+  scrollbar-width: none;
+  /* Firefox */
+}
+
+.products-features .products-description-wrapper::-webkit-scrollbar {
+  display: none;
 }
 
 .products-features .product-description .brand {
